--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,20 +8,28 @@
 
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="249dp"
-        android:layout_height="217dp"
+        android:layout_width="330dp"
+        android:layout_height="221dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="285dp"
+        tools:layout_editor_absoluteY="96dp"
         tools:srcCompat="@tools:sample/avatars" />
 
     <Button
         android:id="@+id/button2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="123dp"
+        android:layout_height="59dp"
         android:text="블랙박스 영상"
-        tools:layout_editor_absoluteX="81dp"
-        tools:layout_editor_absoluteY="203dp" />
+        tools:layout_editor_absoluteX="42dp"
+        tools:layout_editor_absoluteY="553dp" />
+
+    <Button
+        android:id="@+id/button3"
+        android:layout_width="123dp"
+        android:layout_height="59dp"
+        android:text="블랙박스 영상"
+        tools:layout_editor_absoluteX="248dp"
+        tools:layout_editor_absoluteY="553dp" />
 
     <TextView
         android:id="@+id/textView2"
@@ -34,37 +42,32 @@
         app:layout_constraintStart_toStartOf="parent"
         tools:layout_editor_absoluteY="1dp" />
 
-    <Button
-        android:id="@+id/button3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="충격 기록"
-        tools:layout_editor_absoluteX="236dp"
-        tools:layout_editor_absoluteY="203dp" />
-
-    <ImageView
-        android:id="@+id/imageView2"
-        android:layout_width="56dp"
-        android:layout_height="54dp"
-        tools:layout_editor_absoluteX="1dp"
-        tools:layout_editor_absoluteY="1dp"
-        tools:srcCompat="@tools:sample/avatars" />
-
     <TextView
         android:id="@+id/textView3"
-        android:layout_width="wrap_content"
+        android:layout_width="329dp"
         android:layout_height="wrap_content"
         android:text="사용자"
-        android:textSize="26sp"
-        tools:layout_editor_absoluteX="81dp"
-        tools:layout_editor_absoluteY="133dp" />
+        android:textSize="30sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        tools:layout_editor_absoluteY="411dp" />
 
     <ImageView
         android:id="@+id/imageView3"
-        android:layout_width="255dp"
-        android:layout_height="76dp"
-        tools:layout_editor_absoluteX="81dp"
-        tools:layout_editor_absoluteY="502dp"
+        android:layout_width="329dp"
+        android:layout_height="75dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         tools:srcCompat="@tools:sample/avatars" />
+
+    <ImageButton
+        android:id="@+id/imageButton2"
+        android:layout_width="50dp"
+        android:layout_height="46dp"
+        app:srcCompat="@drawable/ic_baseline_settings_24"
+        tools:layout_editor_absoluteX="362dp"
+        tools:layout_editor_absoluteY="1dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
