--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -53,7 +53,7 @@
                 android:inputType="textPassword" />
 
             <Button
-                android:id="@+id/button3"
+                android:id="@+id/signUpbtn"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="회원가입" />
