--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -66,7 +66,7 @@
         android:layout_marginStart="82dp"
         android:layout_marginTop="103dp"
         android:layout_marginBottom="130dp"
-        android:text="블랙박스 영상"
+        android:text=" 충격 기록"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@+id/button2"
         app:layout_constraintTop_toBottomOf="@+id/textView3"
