--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,16 +10,15 @@
         android:id="@+id/imageView"
         android:layout_width="330dp"
         android:layout_height="221dp"
-        android:layout_marginTop="44dp"
-        android:layout_marginBottom="15dp"
-        app:layout_constraintBottom_toTopOf="@+id/imageView3"
+        app:layout_constraintBottom_toTopOf="@+id/textView3"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.493"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView2"
+        app:layout_constraintTop_toTopOf="parent"
         tools:srcCompat="@android:drawable/star_big_off" />
 
     <LinearLayout
+        android:id="@+id/linearLayout2"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="horizontal">
@@ -32,7 +31,7 @@
             <TextView
                 android:id="@+id/textView2"
                 android:layout_width="362dp"
-                android:layout_height="wrap_content"
+                android:layout_height="72dp"
                 android:gravity="center"
                 android:text="Lucky Box 메인"
                 android:textSize="35sp" />
@@ -46,7 +45,7 @@
     </LinearLayout>
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/black_btn"
         android:layout_width="123dp"
         android:layout_height="0dp"
         android:layout_marginStart="42dp"
@@ -55,12 +54,12 @@
         android:layout_marginBottom="130dp"
         android:text="블랙박스 영상"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/button4"
+        app:layout_constraintEnd_toStartOf="@+id/shock_btn"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView3" />
 
     <Button
-        android:id="@+id/button4"
+        android:id="@+id/shock_btn"
         android:layout_width="123dp"
         android:layout_height="0dp"
         android:layout_marginStart="82dp"
@@ -68,7 +67,7 @@
         android:layout_marginBottom="130dp"
         android:text=" 충격 기록"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/button2"
+        app:layout_constraintStart_toEndOf="@+id/black_btn"
         app:layout_constraintTop_toBottomOf="@+id/textView3"
         app:layout_constraintVertical_bias="0.0" />
 
@@ -76,21 +75,10 @@
         android:id="@+id/textView3"
         android:layout_width="329dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
         android:text="사용자"
         android:textSize="30sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView3" />
-
-    <ImageView
-        android:id="@+id/imageView3"
-        android:layout_width="329dp"
-        android:layout_height="75dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:srcCompat="@tools:sample/backgrounds/scenic" />
+        tools:layout_editor_absoluteY="411dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
